# Mozi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
deploy/: .env.example  README.md
docs/: architecture.md
public/: electron.js
server/: .dockerignore  .env.example  Dockerfile.base  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1842f1ac7aae_add_workspace_path_column.py  251988f46ee0_add_user_active_workspace_id.py  a3f7c8d91b02_add_workflow_tables.py  b4e8d9f02c13_add_workflow_run_context_data.py  bdce3646bd28_initial_schema.py  c5f1a2e03d14_add_toolkit_tables.py  d8a3c1b04e21_mcp_servers_stdio_config.py  e2b4c9d01a11_agent_run_conversation.py  f1a2b3c04d00_agent_run_pin_and_feedback.py
server/scripts/: fix_alembic_version.py  migrate.sh  seed.py
server/services/agent/: Dockerfile  main.py  router.py  service.py  skills_fs.py
server/services/auth/: Dockerfile  main.py  router.py  service.py
server/services/mcp/: Dockerfile  access.py  gateway.py  import_cursor_config.py  main.py  router.py  server.py  stdio_bridge.py
server/services/sandbox/: Dockerfile  agent_run_pub.py  executor.py  llm_routing.py  main.py  mcp_tools.py  tasks.py
server/services/sandbox/builtin_tools/: __init__.py  _base.py  api_caller.py  code_executor.py  file_manager.py  image_analyzer.py  text_summarizer.py  web_search.py
server/services/workflow/: Dockerfile  adapter.py  engine.py  main.py  router.py  service.py  validator.py  worker.py
server/services/workspace/: Dockerfile  main.py  router.py  service.py
server/shared/: __init__.py  config.py  database.py  dependencies.py  security.py
server/shared/models/: __init__.py  agent.py  embedding.py  mcp_server.py  role.py  session.py  toolkit.py  user.py  workflow.py  workspace.py
server/shared/schemas/: agent.py  auth.py  mcp_registry.py  mcp_server.py  skills.py  toolkit.py  user.py  workflow.py  workspace.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/mozi-core/: Cargo.toml
src-tauri/crates/mozi-core/src/: lib.rs
src-tauri/crates/mozi-core/src/agent/: mod.rs  react.rs  registry.rs  sub.rs  task.rs  traits.rs  types.rs  workflow.rs
src-tauri/crates/mozi-core/src/context/: mod.rs  registry.rs  types.rs  window.rs
src-tauri/crates/mozi-core/src/context/action/: history.rs  mod.rs  record.rs  types.rs
src-tauri/crates/mozi-core/src/context/perception/: input.rs  mod.rs  pipeline.rs  processor.rs
src-tauri/crates/mozi-core/src/context/policy/: engine.rs  mod.rs  rule.rs  traits.rs  types.rs
src-tauri/crates/mozi-core/src/errors/: agent.rs  context.rs  mod.rs  skills.rs  swarm.rs  sys.rs  tool.rs
src-tauri/crates/mozi-core/src/menu/: mod.rs
src-tauri/crates/mozi-core/src/skills/: mod.rs  registry.rs  store.rs  traits.rs  types.rs
src-tauri/crates/mozi-core/src/skills/fetch/: mod.rs  rag.rs  search.rs
src-tauri/crates/mozi-core/src/skills/interactive/: confirm.rs  dialogue.rs  mod.rs
src-tauri/crates/mozi-core/src/skills/memory/: long_term.rs  mod.rs  short_term.rs
src-tauri/crates/mozi-core/src/skills/policy/: fallback.rs  mod.rs  retry.rs
src-tauri/crates/mozi-core/src/swarm/: collab.rs  coordinator.rs  master.rs  mod.rs  scheduler.rs  traits.rs  types.rs
src-tauri/crates/mozi-core/src/system/: appearance.rs  disk.rs  info.rs  mod.rs  network.rs  os.rs
src-tauri/crates/mozi-core/src/tools/: error.rs  mod.rs  registry.rs
src-tauri/crates/mozi-core/src/tools/adapter/: anthropic.rs  mcp.rs  mod.rs  openai.rs
src-tauri/crates/mozi-core/src/tools/buildin/: echo.rs  mod.rs  shell.rs  task.rs
src-tauri/crates/mozi-core/src/tools/remote/: mcp.rs  mod.rs  rpc.rs  session.rs  stdio.rs
src-tauri/src/: lib.rs  local_skills.rs  main.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/system/: mod.rs
(+170 files in other folders)
